fix(scrollbar)
Removed the padding for members component location.
Redesigned the scrollbar to look like all the other scroll bars.

fixed #18(pr)

--- a/src/app/components/History/HistoryList.scss
+++ b/src/app/components/History/HistoryList.scss
@@ -3,6 +3,16 @@
     display: flex;
     flex-direction: column;
     overflow-y: auto;
+    &::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+        background: #ddd;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+        border-radius: 3px;
+        background: #aaa;
+    }
     #title {
         font-weight: 600;
         padding: 5px;
